--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="styles/open-iconic-bootstrap.min.css">
 <link rel="stylesheet" href="styles/main.css">
 </head>
-<body onload='storetext();'>
+<body style='overflow-x:hidden;'>
   <div class="settings">
     <span class="oi oi-cog"></span>
   </div>
@@ -14,7 +14,7 @@
   </div>
   <div class="settings-drawer">
     <textarea id='streamlurk' name='streamlurk' cols=50 rows=20></textarea>
-    <button onclick="lurk()">Lurk Away!</button>
+    <button id='lurkBtn' name='lurkBtn'>Lurk Away!</button>
   </div>
 </body>
 <script src= "http://player.twitch.tv/js/embed/v1.js"></script>
@@ -22,5 +22,5 @@
 <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+<script src="js/team_new.js"></script>
 </html>
